notebook: functions updated

--- a/notebook/Functions.ipynb
+++ b/notebook/Functions.ipynb
@@ -58,6 +58,21 @@
    },
    "outputs": [],
    "source": [
+    "def func(*argv, **kwarg):\n",
+    "    print(\"func argv: %s\" % str(argv))\n",
+    "    print(\"func kwarg: %s\" % str(kwarg))\n",
+    "    \n",
+    "func(2, 3, a=4, b=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "def func(*argv):\n",
     "    return argv[0] + argv[1], argv[2] + argv[3]\n",
     "\n",
@@ -92,21 +107,6 @@
     "    return add(*argv[:2]), add(*argv[2:])\n",
     "\n",
     "print(func(2, 3, 4, 5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def func(*argv, **kwarg):\n",
-    "    print(\"func argv: %s\" % str(argv))\n",
-    "    print(\"func kwarg: %s\" % str(kwarg))\n",
-    "    \n",
-    "func(2, 3, a=4, b=5)"
    ]
   },
   {
@@ -233,7 +233,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Beside of that, **any** object with `.__call__(…)` method can act as a function. But we'll return to it in the «Classes» chapter."
+    "Beside of that, **any** object with `.__call__(…)` method can act as a function. But we'll return to it in the «Classes» chapter.\n",
+    "\n",
+    "About **lambda** functions — in the «Functional» chapter."
    ]
   }
  ],
