--- a/notebook/04.Functional.ipynb
+++ b/notebook/04.Functional.ipynb
@@ -71,7 +71,40 @@
     "2. produce list of squares\n",
     "3. combine two lists (produce all possible combinations)\n",
     "4. multiply pairs\n",
-    "5. take only odd products"
+    "5. take only odd products\n",
+    "\n",
+    "### imperative approach"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# initial data\n",
+    "a = [2, 3, 4, 5]\n",
+    "b = []\n",
+    "# list of squares\n",
+    "for x in a:\n",
+    "    b.append(x * x)\n",
+    "# combine lists\n",
+    "r = []\n",
+    "for x in a:\n",
+    "    for y in b:\n",
+    "        if x * y % 2:\n",
+    "            r.append(x * y)\n",
+    "# result\n",
+    "print(r)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### mixed approach"
    ]
   },
   {
@@ -87,13 +120,18 @@
     "# list of squares\n",
     "b = map(lambda x: x * x, a)\n",
     "# combine: matrix\n",
-    "matrix = map(lambda y: map(lambda x: (y, x), b), a)\n",
+    "matrix = map(lambda y: map(lambda x: x * y, b), a)\n",
     "# reduce matrix to a single list\n",
     "reduced = reduce(lambda x, y: x + y , matrix)\n",
-    "# make products\n",
-    "products = map(lambda x: x[0] * x[1], reduced)\n",
     "# take only odd products\n",
-    "filter(lambda x: x % 2, products)"
+    "filter(lambda x: x % 2, reduced)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### functional approach"
    ]
   },
   {
@@ -109,10 +147,9 @@
     "\n",
     "# the same as above, but without variables assignment\n",
     "filter(lambda x: x % 2,\n",
-    "       map(lambda x: x[0] * x[1],\n",
-    "           reduce(lambda z, v: z + v,\n",
-    "                  map(lambda y: map(lambda x: (y, x),\n",
-    "                                    map(lambda x: x * x, a)), a))))"
+    "       reduce(lambda x, y: x + y ,\n",
+    "              map(lambda y: map(lambda x: x * y,\n",
+    "                                map(lambda x: x * x, a)), a)))"
    ]
   },
   {
@@ -159,13 +196,11 @@
     "# list of squares as a list comprehension\n",
     "b = [x * x for x in a]\n",
     "# matrix as a list comprehension\n",
-    "matrix = [[(x, y) for y in a] for x in b]\n",
+    "matrix = [[x * y for y in a] for x in b]\n",
     "# reduce matrix\n",
     "reduced = reduce(lambda x, y: x + y, matrix)\n",
-    "# multiply\n",
-    "products = [x[0] * x[1] for x in reduced]\n",
     "# filter odd products\n",
-    "[x for x in products if x % 2]"
+    "[x for x in reduced if x % 2]"
    ]
   },
   {
@@ -179,9 +214,7 @@
     "# initial data\n",
     "a = [2, 3, 4, 5]\n",
     "# the same without variables assignment\n",
-    "[x for x in\n",
-    " [x[0] * x[1] for x in\n",
-    "  reduce(lambda x, y: x + y, [[(y, x) for x in a] for y in [ x * x for x in a ]])] if x % 2]"
+    "[x for x in reduce(lambda x, y: x + y, [[x * y for y in a] for x in [x * x for x in a]]) if x % 2]"
    ]
   },
   {
@@ -229,7 +262,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## functional loops"
+    "## flow control statements\n",
+    "\n",
+    "### imperative approach"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def test(a, b):\n",
+    "    if a < b:\n",
+    "        return \"a\"\n",
+    "    else:\n",
+    "        return \"b\"\n",
+    "\n",
+    "test(5, 6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### functional approach"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "test = lambda a, b: \"a\" if a < b else \"b\"\n",
+    "\n",
+    "test(5, 6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## functional loops\n",
+    "\n",
+    "(not really)"
    ]
   },
   {
